# code-organizer

./: .gitignore  CLAUDE.md  DEMO_RESULTS.md  DEPLOYMENT_SUCCESS.md  GITHUB_SETUP.md  README.md  code_organizer_prompt.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/: README.md  github-repo-management.md
code_organizer/: __init__.py  config.py  main.py
code_organizer/interactive/: __init__.py
code_organizer/phase1_scan/: __init__.py  display.py  quick_scanner.py
code_organizer/phase2_organize/: __init__.py
code_organizer/utils/: __init__.py  file_utils.py  logger.py  progress.py
tests/: __init__.py
